# prueba-mercadolibre

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml
api/: Dockerfile  README.md  bq.py  main.py  requirements.txt
conf/base/: catalog.yml  globals.yml
conf/base/parameters/: risk_scoring.yml
conf/local/: catalog.yml
dashboard/: Dockerfile  README.md  app.py  bq.py  requirements.txt
docs/: CHALLENGE.md  MODELO_RIESGO.md
notebooks/: 01_eda.ipynb  02_model_tuning.ipynb  03_weight_sensitivity.ipynb
src/prueba_mercadolibre/: __init__.py  __main__.py  pipeline_registry.py
src/prueba_mercadolibre/pipelines/: __init__.py
src/prueba_mercadolibre/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/prueba_mercadolibre/pipelines/ingest/: __init__.py  nodes.py  pipeline.py
src/prueba_mercadolibre/pipelines/risk_scoring/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_api_production.py  test_data_processing.py  test_risk_scoring.py
